# oop4

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
test/: test.cpp
